# flask-tutorial

./: .envrc.example  .gitignore  MANIFEST.in  Pipfile  README.md  pyproject.toml  requirements.txt
docs/: table-definition.md  コーディングメモ.adoc  コーディングメモ.asciidoc  環境構築.md
flaskr/: __init__.py  auth.py  blog.py  db.py  schema.sql
flaskr/api/v1/endpoints/: blog.py  blogs.py  csrf_token.py  healthcheck.py  profile.py  session.py
flaskr/routes/: routes.py
tests/: conftest.py  data.sql  test_auth.py  test_blog.py  test_db.py
tests/api/v1/: conftest.py  test_healthcheck.py
tests/api/v1/blog/: test_gets.py
tests/api/v1/profile/: test_profile_get.py
tests/api/v1/session/: test_delete.py  test_get.py  test_post.py
